--- a/views/partials/pm-nav.ejs
+++ b/views/partials/pm-nav.ejs
@@ -200,6 +200,9 @@
                         <i class="fas fa-user-circle me-1"></i>Account
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="/subscription"><i class="fas fa-crown me-2"></i>Subscription Plans</a></li>
+                        <li><a class="dropdown-item" href="/payment-methods"><i class="fas fa-credit-card me-2"></i>Payment Methods</a></li>
+                        <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/team"><i class="fas fa-users-cog me-2"></i>Team</a></li>
                         <li><a class="dropdown-item" href="/activity"><i class="fas fa-history me-2"></i>Activity Log</a></li>
                         <li><a class="dropdown-item" href="/2fa/setup"><i class="fas fa-shield-alt me-2"></i>Two-Factor Auth</a></li>
