--- a/views/billing/subscription.ejs
+++ b/views/billing/subscription.ejs
@@ -351,4 +351,7 @@ async function confirmSubscription() {
 }
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <%- include('../partials/footer') %>
+</body>
+</html>
